fix off-center curriculum listing

--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -165,6 +165,7 @@ body {
 .docs-content {
   padding-bottom: 3rem;
   order: 1;
+  width: 100%;
 }
 
 .docs-navigation, .blog-navigation {
